<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <SurfaceView
        android:id="@+id/camera_surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">
        <include layout="@layout/performance_log"
            android:layout_height="414dp"
            android:layout_width="match_parent" />

    </FrameLayout>

    <Button
        android:id="@+id/btn_stop_live"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:visibility="gone"
        android:text="@string/live_stop" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">


        <ToggleButton
            android:id="@+id/toggle_live_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/live_push"
            android:textOn="@string/live_stop"
            android:layout_gravity="left|bottom"
            android:checked="false" />

        <ToggleButton
            android:id="@+id/toggle_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/app_camera"
            android:textOn="@string/app_camera"
            android:layout_gravity="center|bottom"
            android:checked="false" />

        <ToggleButton
            android:id="@+id/toggle_flash_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/toggle_switch_flash_on"
            android:textOn="@string/toggle_switch_flash_off"
            android:checked="false" />
    </TableRow>

</FrameLayout>
